[tool.poetry]
name = "cosmo"
version = "0.10.1"
license = "mit"
description = "???"
authors = ["Ember Keske <ember.keske@wobcom.de>", "Johann Wagner <johann.wagner@wobcom.de>", "Yureka <yuka@yuka.dev>", "Fiona Weber <fiona.weber@wobcom.de>", "Lou Lecrivain <lou.lecrivain@wdz.de>"]

[tool.poetry.scripts]
cosmo = "cosmo.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = ">2.26.0"
PyYAML = ">5.1"
packaging = "^24"
deepmerge = "^2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
mypy = "^1.15.0"
types-pyyaml = "^6.0.12.20241230"
types-requests = "^2.32.0.20250301"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
