[project]
name = "cosmo"
version = "0.10.1"
license = "mit"
description = "???"
authors = [
    { name="Ember Keske", email="ember.keske@wobcom.de" },
    { name="Johann Wagner", email="johann.wagner@wobcom.de" },
    { name="Yureka", email="yuka@yuka.dev>"},
    { name="Fiona Weber", email="fiona.weber@wobcom.de"},
    { name="Lou Lecrivain", email="lou.lecrivain@wdz.de>"}
]
[tool.poetry.scripts]
cosmo = "cosmo.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = ">2.26.0"
PyYAML = ">5.1"
packaging = "^24"
deepmerge = "^2.0"
termcolor = "^3.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
mypy = "^1.15.0"
types-pyyaml = "^6.0.12.20241230"
types-requests = "^2.32.0.20250301"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
